CSS fixed for different resolutions

--- a/src/AboutAnimate.css
+++ b/src/AboutAnimate.css
@@ -1,8 +1,11 @@
-.AnimationContainer{
+@media screen and (max-width: 1900px){
+    .AnimationContainer{
     width: 100%;
     overflow: hidden;
     height: calc(100vh - 100px);
+    }
 }
+
 
 @media (max-width:768px){
     .AnimationContainer{
