--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.App {
-  text-align: center;
-  position: relative;
+@media screen and (max-width: 1900px){
+  .App {
+    text-align: center;
+    position: relative;
+  }
 }
 
