--- a/src/Dot.css
+++ b/src/Dot.css
@@ -1,3 +1,5 @@
-.dot:hover{
-    transform: scale(4, 0.5);
+@media screen and (max-width: 1900px){
+    .dot:hover{
+        transform: scale(4, 0.5);
+    }
 }
