--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,32 +1,33 @@
-.footer-wrapper{
-    position: fixed;
-    bottom: 0;
-    z-index: 999;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    align-items: center;
-    justify-items: right;
-    background-color: rgb(255, 255, 255);
+@media screen and (max-width: 1900px){
+    .footer-wrapper{
+        position: fixed;
+        bottom: 0;
+        z-index: 999;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        align-items: center;
+        justify-items: right;
+        background-color: rgb(255, 255, 255);
+    }
+    
+    .footer-link{
+        color: gray;
+        font-size: 30px;
+        margin-right: 30px;
+    }
+    .footer-credentials{
+        text-align: left;
+        font-size: 15px;
+        color: gray;
+        margin-right: 100px;
+    }
+    .footer-nav{
+        margin-right: 200px;
+        display: flex;
+        justify-content: center;
+    }
 }
-
-.footer-link{
-    color: gray;
-    font-size: 30px;
-    margin-right: 30px;
-}
-.footer-credentials{
-    text-align: left;
-    font-size: 15px;
-    color: gray;
-    margin-right: 100px;
-}
-.footer-nav{
-    margin-right: 200px;
-    display: flex;
-    justify-content: center;
-}
-
 
 @media (max-width:768px){
     .footer-credentials{
