--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-body {
-  margin: 0;
-  font-family: 'Lato', sans-serif;
+@media screen and (max-width: 1900px){
+  body {
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+  }
+  #root{
+    position: relative;
+  }
 }
-#root{
-  position: relative;
-}
-
