--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
 }
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
     .about-container{
         display: grid;
         grid-template-columns: 1fr 2fr;
