--- a/src/AboutAnimate.css
+++ b/src/AboutAnimate.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
     .AnimationContainer{
     width: 100%;
     overflow: hidden;
