--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
     .contactForm-wrapper{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -6,7 +6,6 @@
         align-items: center;
         height: 100vh;
     }
-    
     
     /* Contact Form -- Text Area */
     .contact-textContainer{
