--- a/src/Dot.css
+++ b/src/Dot.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
     .dot:hover{
         transform: scale(4, 0.5);
     }
