--- a/src/Experience.css
+++ b/src/Experience.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
 }
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
     .experience-web-view-wrapper{
         height: 100vh;
         display: grid;
