--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
     .footer-wrapper{
         position: fixed;
         bottom: 0;
