--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1900px){
+@media only screen and (max-width: 1900px){
   body {
     margin: 0;
     font-family: 'Lato', sans-serif;
